# nemesis

./: main.py  pyproject.toml  readme.md
src/nemesis/: events.py  servers.py  task_group.py  typing.py  workers.py
src/nemesis/protocols/: h11p.py  http_stream.py  websocket.py
