[tool.poetry]
name = "nemesis"
version = "0.0.1"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
h11 = "^0.13.0"
wsproto = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
